--- a/hw4-resume/index.html
+++ b/hw4-resume/index.html
@@ -64,7 +64,7 @@
                     <li class="list-group-item"><a href="../hw3-bootstrap/index.html">Homework 3: Bootstrap Grid</a></li>
                     <li class="list-group-item"><a href="../hw4-resume/index.html">Homework 4: Resume</a></li>
                     <li class="list-group-item"><a href="../p1-cartoon/index.html">Project 1: Cartoon</a></li>
-                    <li class="list-group-item"><a href="../p2-animation/index.html">Project 2: JS Animation</a></li>
+                    <li class="list-group-item"><a href="../p2-animation/index.html">Project 2: Animation</a></li>
                     <li class="list-group-item"><a href="../p3-form/index.html">Project 3: Form</a></li>
                     <li class="list-group-item"><a href="../p4-wick-video/index.html">Project 4: Wick Video</a></li>
                     <li class="list-group-item"><a href="../p5-data-visualization/index.html">Project 5: Data Visualization</a></li>
