--- a/p7-pwa/index.html
+++ b/p7-pwa/index.html
@@ -33,7 +33,7 @@
             <button type="button" class="btn" onclick="resetForm()">Reset</button>
             <div id="result"></div>
             <br><a href="../index.html">Back to Home Page</a>
-            <br><button onclick="window.close();">Close Window</button>
+            <br><br><button onclick="window.close();">Close Window</button>
         </form>
     </div>
 </body>
